tests/consteval_string_index_negative_bad.stderr
tests/consteval_string_index_negative_bad.hop:9:23: error: HOP2083: const block failed compile-time evaluation: index is negative in const evaluation
